--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,6 +24,7 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+  margin: 5px 10px;
 }
 
 @layer utilities {
